poc mocked tests
Signed-off-by: Pinky Gupta <pinky.gupta1@ibm.com>